# eyes-timer

./: CLAUDE.md  Eyes Timer.spec  app.py  eyes_timer.spec  main.py  pyproject.toml
constants/: time.py
utils/: notification.py
